--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>trevor harris</title>
+    <style>
+      body {font-family: Arial, sans-serif}
+    </style>
     <script type="text/javascript">
+      
 // <![CDATA[
 var colour="random"; // in addition to "random" can be set to any valid colour eg "#f0f" or "red"
 var sparkles=50;
@@ -203,23 +207,33 @@ function newColour() {
 }
 // ]]>
 </script>
+<style>nav {background-color: rgb(246, 246, 246)};
+</style>
 </head>
 <body>
     <img src="img/peace.png" width="30" height="30">
     <p>Trevor Harris, Lab 06</p>
-    <img src="img/simple.JPG" width="400" height="275">
-    <p><strong><h2>Creative Statement</strong></h2>
-        In my practice I explore the connections between people and their environments, and the ghosts lingering in (manmade/natural) 
-        physical spaces after humans have left. For how soft and messy humanity is, it often feels that the structures we build are
-        rigid, strict, and hard to follow, whether that's literal buildings or metaphorical structures like work and social interaction. Taking
-        inspiration from my watchful, introspective childhood, my projects explore what it can mean to try and fit something amorphous into a
-        square hole. <br/> <br/> I work primarily through poetry, but dabble in painting, 3D sculpture, and longform writing. <br/> <br/>How long has the
-        sidewalk on the corner of your block been around? Generations of humanity peeling back like wallpaper, the same corner can live so many lives. What stories would it tell?
-    </p>
-    <p><h2>Homework</h2></p>
-    <ul>
-        <li>Homework 2</li>
-        
-    </ul>
+<img src="img/simple.JPG" width="400" height="275" alt="Simple photo">
+<h2 style="color:blue;"><strong>Creative Statement</strong></h2>
+<p>
+  In my practice I explore the connections between people and their environments, and the ghosts lingering in (manmade/natural)
+  physical spaces after humans have left. For how soft and messy humanity is, it often feels that the structures we build are
+  rigid, strict, and hard to follow, whether that's literal buildings or metaphorical structures like work and social interaction. Taking
+  inspiration from my watchful, introspective childhood, my projects explore what it can mean to try and fit something amorphous into a
+  square hole.
+</p>
+<p>I work primarily through poetry, but dabble in painting, 3D sculpture, and longform writing.</p>
+<p>How long has the sidewalk on the corner of your block been around? Generations of humanity peeling back like wallpaper, the same corner can live so many lives. What stories would it tell?</p>
+
+<h2 style="color:blue;">Readings and Reflections</h2>
+<ul>
+  <li>Reading 1</li>
+  <li><em>In Plato's Cave</em></li>
+</ul>
+
+<h2 style="color:blue;">Homework</h2>
+<ul>
+  <li>Homework 2</li>
+</ul>
 </body>
 </html>
