--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ function newColour() {
 }
 // ]]>
 </script>
-<style>nav {background-color: rgb(246, 246, 246)};
+<style>nav {background-color: rgb(217, 216, 216)};
 </style>
 </head>
 <body>
@@ -227,8 +227,8 @@ function newColour() {
 
 <h2 style="color:blue;">Readings and Reflections</h2>
 <ul>
-  <li>Reading 1</li>
-  <li><em>In Plato's Cave</em></li>
+  <li><a href="reading1.html"></a><em>In Plato's Cave</em></li>
+  <!-- <li><a href="reading1.html">Reading 1</a></li> --> 
 </ul>
 
 <h2 style="color:blue;">Homework</h2>
