--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ function newColour() {
 
 <h2 style="color:blue;">Readings and Reflections</h2>
 <ul>
-  <li><a href="reading1.html"></a><em>In Plato's Cave</em></li>
+  <li><a href="reading1.html"><em>In Plato's Cave</em></a></li>
   <!-- <li><a href="reading1.html">Reading 1</a></li> --> 
 </ul>
 
