Replace simple.JPG with simple2.JPG image

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ function newColour() {
 <body>
     <img src="img/peace.png" width="30" height="30">
     <p>Trevor Harris, Lab 06</p>
-<img src="img/simple.JPG" width="400" height="275" alt="Simple photo">
+<img src="simple2.JPG" width="400" height="275" alt="Simple photo">
 <h2 style="color:blue;"><strong>Creative Statement</strong></h2>
 <p>
   In my practice I explore the connections between people and their environments, and the ghosts lingering in (manmade/natural)
