--- a/index.html
+++ b/index.html
@@ -207,13 +207,13 @@ function newColour() {
 }
 // ]]>
 </script>
-<style>nav {background-color: rgb(217, 216, 216)};
+<style>nav {background-color: rgb(206, 206, 206)};
 </style>
 </head>
 <body>
     <img src="img/peace.png" width="30" height="30">
     <p>Trevor Harris, Lab 06</p>
-<img src="simple2.JPG" width="400" height="275" alt="Simple photo">
+<img src="simple2.JPG" width="400" height="275" alt="Trevor Harris headshot">
 <h2 style="color:blue;"><strong>Creative Statement</strong></h2>
 <p>
   In my practice I explore the connections between people and their environments, and the ghosts lingering in (manmade/natural)
@@ -227,13 +227,15 @@ function newColour() {
 
 <h2 style="color:blue;">Readings and Reflections</h2>
 <ul>
-  <li><a href="reading1.html"><em>In Plato's Cave</em></a></li>
+  <li><a href="reading1.html" ><em>In Plato's Cave</em></a></li>
+  <li><a href="reading2.html" ><em>Sleepwalking Into Disaster</em></a></li>
   <!-- <li><a href="reading1.html">Reading 1</a></li> --> 
 </ul>
 
 <h2 style="color:blue;">Homework</h2>
 <ul>
-  <li>Homework 2</li>
+  <li><a href="homework2.html"> <div title="Good choice">Homework 2</div></a></li>
+  <li><div title="Another good choice"></div>Homework 3</li>
 </ul>
 </body>
 </html>
