--- a/homework2.html
+++ b/homework2.html
@@ -23,7 +23,7 @@
     <p>Image B: While exploring the school for this assignment, I visited hallways I'd never been before to see what I could find. This was one of the theater department rooms. 
         I loved the deep green color of the cabinets and the chrome on the chair shining from the dark. It's not as in focus as I'd like so I masked that slightly by adding texture 
         and grain to the image. If I could do the assignment again, I would use this image for the first crop, as I actually do not like how this crop (5"x7") compared to the original
-        crop on the image, which is attached to the right. 
+        crop on the image, which is attached to the right. Something about the voyeuristic framing with the door and more view of the cabinets tells more of a story to me.
     </p>
 </body>
 </html>
