--- a/reading2.html
+++ b/reading2.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reading 2</title>
     <style type="text/css">
-      body {font-family: Arial, sans-serif}
         a.nounderline {text-decoration: none;}
     </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <img src="img/peace.png" width="30" height="30"> <a href="index.html" style="color: green"> trevorslist</a>
