--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>trevor harris</title>
-    <style>
-      body {font-family: Arial, sans-serif}
-    </style>
+    <link rel="stylesheet" href="styles.css">
     <script type="text/javascript">
       
 // <![CDATA[
@@ -207,14 +205,12 @@ function newColour() {
 }
 // ]]>
 </script>
-<style>nav {background-color: rgb(206, 206, 206)};
-</style>
 </head>
 <body>
     <img src="img/peace.png" width="30" height="30">
     <p>Trevor Harris, Lab 06</p>
 <img src="simple2.JPG" width="400" height="275" alt="Trevor Harris headshot">
-<h2 style="color:blue;"><strong>Creative Statement</strong></h2>
+<h2>Creative Statement</h2>
 <p>
   In my practice I explore the connections between people and their environments, and the ghosts lingering in (manmade/natural)
   physical spaces after humans have left. For how soft and messy humanity is, it often feels that the structures we build are
@@ -225,16 +221,17 @@ function newColour() {
 <p>I work primarily through poetry, but dabble in painting, 3D sculpture, and longform writing.</p>
 <p>How long has the sidewalk on the corner of your block been around? Generations of humanity peeling back like wallpaper, the same corner can live so many lives. What stories would it tell?</p>
 
-<h2 style="color:blue;">Readings and Reflections</h2>
+<h2>Readings and Reflections</h2>
 <ul>
   <li><a href="reading1.html" ><em>In Plato's Cave</em></a></li>
   <li><a href="reading2.html" ><em>Sleepwalking Into Disaster</em></a></li>
   <!-- <li><a href="reading1.html">Reading 1</a></li> --> 
 </ul>
 
-<h2 style="color:blue;">Homework</h2>
+<h2>Homework</h2>
 <ul>
   <li><a href="homework2.html"> <div title="Good choice">Homework 2</div></a></li>
+  <li><a href="homework2image2.html">Homework 2 Image B</a></li>
   <li><div title="Another good choice"></div>Homework 3</li>
 </ul>
 </body>
