--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ function newColour() {
 // ]]>
 </script>
 </head>
-<body>
+<body style="background-color: rgb(215, 215, 215)">
     <img src="img/peace.png" width="30" height="30">
     <p>Trevor Harris, Lab 06</p>
 <img src="simple2.JPG" width="400" height="275" alt="Trevor Harris headshot">
@@ -230,9 +230,11 @@ function newColour() {
 
 <h2>Homework</h2>
 <ul>
-  <li><a href="homework2.html"> <div title="Good choice">Homework 2</div></a></li>
+  <li><a href="homework2.html"><div title="Good choice">Homework 2</div></a></li>
   <li><a href="homework2image2.html">Homework 2 Image B</a></li>
-  <li><div title="Another good choice"></div>Homework 3</li>
+  <li><a href="homework3.html"><div title="Another good choice">Homework 3: Depth of Field</div></a></li>
+  <!---<li><a href="field_blur.html"> Homework 3: Field Blur</a></li> -->
 </ul>
+<img src="img/construction-gif.gif" width="60px" height="100px"/>
 </body>
 </html>
