--- a/homework2.html
+++ b/homework2.html
@@ -9,7 +9,7 @@
 <body>
     <h3></h3>
     <img src="img/peace.png" width="30" height="30"> <a href="index.html" style="color: green"> trevorslist</a> <br/> <br/>
-    <img src="img/hwtwo.jpg" width="700" height="394">
+    <img src="img/hwtwoc.jpg" width="700" height="394">
     <p>Image A: Luckily my lab class is during the late afternoon, meaning beautiful lines of shadow mark the Hunter buildings and really show off their detail.
         I liked this composition because of the layers of detailed lines between the North building, the East building, and the diagonal sky bridge at the bottom. As for the colors,
         I was inspired by the rolls of expired film that I've had developed, where the colors are returned softer and more washed out than I would expect new film to be. The colors in this photo
