--- a/homework2image2.html
+++ b/homework2image2.html
@@ -8,8 +8,8 @@
 </head>
 <body>
      <img src="img/peace.png" width="30" height="30"> <a href="index.html" style="color: green"> trevorslist</a> <br/> <br/>
-    <img src="img/hwimg2.jpg" width="375" height="525">
-    <img src="img/hwimg2alt.jpg" width="338" height="600">
+    <img src="img/hwimg2c.jpg" width="375" height="525">
+    <img src="img/hwimg2altc.jpg" width="338" height="600">
     <p>Image B: While exploring the school for this assignment, I visited hallways I'd never been before to see what I could find. This was one of the theater department rooms. 
         I loved the deep green color of the cabinets and the chrome on the chair shining from the dark. It's not as in focus as I'd like so I masked that slightly by adding texture 
         and grain to the image. If I could do the assignment again, I would use this image for the first crop, as I actually do not like how this crop (5"x7") compared to the original
