--- a/homework2.html
+++ b/homework2.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <img src="img/peace.png" width="30" height="30"> <a href="index.html" style="color: green"> trevorslist</a> <br/> <br/>
+    <div id= "background"></div>
+    <img class="peace" src="img/peace.png" width="30" height="30"> <a href="index.html" style="color: green"> trevorslist</a> <br/> <br/>
     <img src="img/hwtwoc.jpg" width="700" height="394">
     <p>Image A: Luckily my lab class is during the late afternoon, meaning beautiful lines of shadow mark the Hunter buildings and really show off their detail.
         I liked this composition because of the layers of detailed lines between the North building, the East building, and the diagonal sky bridge at the bottom. As for the colors,
