--- a/homework2image2.html
+++ b/homework2image2.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-     <img src="img/peace.png" width="30" height="30"> <a href="index.html" style="color: green"> trevorslist</a> <br/> <br/>
+    <div id= "background"></div>
+     <img class="peace" src="img/peace.png" width="30" height="30"> <a href="index.html" style="color: green"> trevorslist</a> <br/> <br/>
     <img src="img/hwimg2c.jpg" width="375" height="525">
     <img src="img/hwimg2altc.jpg" width="338" height="600">
     <p>Image B: While exploring the school for this assignment, I visited hallways I'd never been before to see what I could find. This was one of the theater department rooms. 
