--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>trevor harris</title>
     <link rel="stylesheet" href="styles.css">
     <script type="text/javascript">
-      
 // <![CDATA[
 var colour="random"; // in addition to "random" can be set to any valid colour eg "#f0f" or "red"
 var sparkles=50;
@@ -207,10 +206,10 @@ function newColour() {
 </script>
 </head>
 <body style="background-color: rgb(215, 215, 215)">
-    <img src="img/peace.png" width="30" height="30">
+    <img class="peace" src="img/peace.png" width="30" height="30">
     <p>Trevor Harris, Lab 06</p>
 <img src="simple2.JPG" width="400" height="275" alt="Trevor Harris headshot">
-<h2>Creative Statement</h2>
+<h2 class="indent">Creative Statement</h2>
 <p>
   In my practice I explore the connections between people and their environments, and the ghosts lingering in (manmade/natural)
   physical spaces after humans have left. For how soft and messy humanity is, it often feels that the structures we build are
@@ -221,20 +220,25 @@ function newColour() {
 <p>I work primarily through poetry, but dabble in painting, 3D sculpture, and longform writing.</p>
 <p>How long has the sidewalk on the corner of your block been around? Generations of humanity peeling back like wallpaper, the same corner can live so many lives. What stories would it tell?</p>
 
-<h2>Readings and Reflections</h2>
-<ul>
+<div class="container">
+  <div><h2 class="indent">Reading Reflections</h2>
+    <ul>
   <li><a href="reading1.html" ><em>In Plato's Cave</em></a></li>
   <li><a href="reading2.html" ><em>Sleepwalking Into Disaster</em></a></li>
   <!-- <li><a href="reading1.html">Reading 1</a></li> --> 
 </ul>
-
-<h2>Homework</h2>
-<ul>
-  <li><a href="homework2.html"><div title="Good choice">Homework 2</div></a></li>
+  </div>
+  
+  <div><h2 class="indent">Homework</h2>
+    <ul>
+  <li><a href="homework2.html">Homework 2</a></li>
   <li><a href="homework2image2.html">Homework 2 Image B</a></li>
-  <li><a href="homework3.html"><div title="Another good choice">Homework 3: Depth of Field</div></a></li>
+  <li><a href="homework3.html">Homework 3: Depth of Field/Field Blur</a></li>
   <!---<li><a href="field_blur.html"> Homework 3: Field Blur</a></li> -->
 </ul>
-<img src="img/construction-gif.gif" width="60px" height="100px"/>
+  </div>
+</div>
+
+<img src="img/construction-gif.gif" width="60px" height="100px" />
 </body>
 </html>
